--- a/main.css
+++ b/main.css
@@ -1,43 +1,34 @@
-main{
+.main {
     background-color: antiquewhite;
-    }
-    body{
-        background-color: rgb(197, 193, 158);;
-    }
-    
-    header{
-        display: block;
-        height: 250px;
-        font-family: 'LemonMilk';
-        height: 50px;
-    
-    }
-    
-    @font-face {
-        font-family: LemonMilk;
-        src: url(./fonts/LEMONMILK-Light.otf);
-    }
-    td:hover{
-        background-color: darkblue;
-        color: white;
-    }
-    tr{
-        margin: auto;
-    }
-    td{
-        text-align: center;
-    
-    }
-    table{
-        border-spacing: 100px;
-        border: 2px solid black;
-        background-color: cornflowerblue;
-        height: 100px;
-        border-bottom-left-radius: 25px;
-        border-bottom-right-radius: 25px;
-    }
-        
-    
-    
-    
-    
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: space-between;
+    font-family: 'lemonMilk';
+}
+
+td:hover{
+    background-color: rgb(62, 91, 218);
+    color:cornsilk;
+}
+.headTabl{
+    border: solid black 2px;
+    background-color: rgb(96, 94, 226);
+    border-spacing: 30px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    width: 100%;
+    text-align: center;
+}
+
+.footTabl{
+    border: solid black 2px;
+    background-color: rgb(96, 94, 226);
+    border-spacing: 30px;
+    width: 100%;
+    text-align: center;
+}
+@font-face {
+    font-family: "lemonMilk";
+    src: url(/fonts/LEMONMILK-Light.otf);
+}
