--- a/main.css
+++ b/main.css
@@ -1,34 +1,100 @@
 .main {
-    background-color: antiquewhite;
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     height: 100vh;
     justify-content: space-between;
     font-family: 'lemonMilk';
+    color: cornsilk;
+    text-align: center;
 }
 
-td:hover{
-    background-color: rgb(62, 91, 218);
-    color:cornsilk;
+td:hover {
+    background-color: rgb(11, 12, 12);
+    color: cornsilk;
 }
-.headTabl{
+
+.headTabl {
     border: solid black 2px;
-    background-color: rgb(96, 94, 226);
+    background-color: rgb(34, 34, 37);
     border-spacing: 30px;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     width: 100%;
     text-align: center;
+    color: cornsilk;
+    border-collapse: collapse;
 }
 
-.footTabl{
+.footTabl {
     border: solid black 2px;
-    background-color: rgb(96, 94, 226);
+    background-color: rgb(34, 34, 37);
     border-spacing: 30px;
     width: 100%;
     text-align: center;
+    color: cornsilk;
+    border-collapse: collapse;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
 }
+
 @font-face {
     font-family: "lemonMilk";
     src: url(/fonts/LEMONMILK-Light.otf);
+
 }
+
+a:link {
+    color: cornsilk;
+    text-decoration: none;
+}
+
+a:visited {
+    color: cornsilk;
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(196, 188, 156);
+    text-decoration: none;
+
+}
+
+a:active {}
+
+.slogan {
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width :200%;
+        
+    }
+
+    to {
+        margin-left: 0%;
+        width: 200%;
+        
+    }
+
+}
+
+.spec {
+    position: relative;
+}
+.sped{
+    position: absolute;
+}
+
+.tubl{
+    position: relative;
+}
+
+/* @media only screen (max-width:450px){
+    img{
+        width:200px
+    }
+} */
