--- a/public/index.css
+++ b/public/index.css
@@ -1,14 +1,76 @@
-#red{
-color: red;
-background-color: rgb(209, 138, 130);
-width: 100px;
-height: 100px;
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
+
+.text{
+    font-family: 'PT Sans', sans-serif;
+    font-weight: bold;
+    width: 720px;
 }
-@font-face {
-    font-family: 'ZenKurenaido-Regular';
-    src: url(public/ZenKurenaido-Regular.ttf);
+.Kila img{
+
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
 }
-.div{
-    font-family: 'ZenKurenaido-Regular';
-    font-size: large;
+.information{
+    font-family: 'PT Sans', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 15px;
+    width: 200px;
+    height: 100px;
+}
+.reviews{
+    font-family: 'PT Sans', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 15px;
+    width: 200px;
+    height: 100px;
+}
+.product{
+    font-family: 'PT Sans', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 15px;
+    width: 200px;
+    height: 100px;
+}
+.guarantee{
+    font-family: 'PT Sans', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 15px;
+    width: 200px;
+    height: 100px;
+}
+.mid{
+    height: 700px;
+}
+.paragph{
+    font-family: 'PT Sans', sans-serif;
+    font-weight: normal;
+    font-style: italic;
+    font-size: 60px;
+    color: lightgrey;
+    width: 900px;
+}
+
+.vk{
+    font-size: 20px;
+    margin-left: 100px;
+    width: 200px;
+    height: 100px;
+    border-radius: 15px;
+}
+.so{
+    font-size: 20px;
+    width: 200px;
+    height: 100px;
+    border-radius: 15px;
+}
+.gh{
+    font-size: 20px;
+    width: 200px;
+    height: 100px;
+    border-radius: 15px;
 }
