--- a/index.css
+++ b/index.css
@@ -7,12 +7,20 @@ q {
 #quote {
     background-color: cornsilk;
 }
-@font-face {
-    font-family: 'OpenSans';
-    src: local('OpenSans')
-        url(/Fonts/OpenSans.ttf) format('ttf');
+body {
+    font-family: 'Fruktur', cursive;
 }
-div {
-    font-family: 'OpenSans';
-    font-style: italic;
+header {
+    background-color: black;
+    padding: 15px;
+}
+#logo {
+    margin-left: 30px;
+}
+footer {
+    background-color: black;
+    padding: 10px;
+}
+.WhiteContent {
+    height: 610px;
 }
