--- a/main.css
+++ b/main.css
@@ -11,14 +11,13 @@ body {
     border-spacing: 2px;
     background-color: rgb(235, 140, 170);
     width:100%;
-    border-collapse:collapse;
+    border-collapse:separate;
     font-family: 'GOST';
     border-top-color: black;
-    border-color: black;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    border-end-end-radius: 40px;
-    border-end-start-radius: 40px;
+    border-radius: 40px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+
 
     }
 TD{
