--- a/main.css
+++ b/main.css
@@ -2,21 +2,20 @@ body {
     font-family:'GOST', '20354';
 }
 @font-face {
-    font-family: 'GOST';
+    font-family: 'GOST type A Standart';
     src: url(./Public/fonts/GOST\ type\ A\ Standard.ttf);
     font-family: '20354';
     src: url(./Public/fonts/20354.otf)
 }
 .headT{
     border-spacing: 2px;
-    background-color: rgb(235, 140, 170);
+    background-color: rgb(233, 160, 182);
     width:100%;
     border-collapse:separate;
-    font-family: 'GOST';
     border-top-color: black;
     border-radius: 40px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bolder;
 
 
     }
@@ -28,4 +27,10 @@ TD{
     text-align: center;
     font-size: 60px;
     font-family: '20354';
+}
+.header{
+    text-align: center;
+    background-color: lemonchiffon;
+    background-size: 60px;
+    font-family: monospace;
 }
