--- a/my worky/michael.css
+++ b/my worky/michael.css
@@ -1,11 +1,28 @@
 
-header.page-header {
-    background-image: '/my worky/nicekidmichael1.png';
-    background-color: rgb(0, 247, 247);
-    display: flex;
-    height: 120px;
-    min-width: 120px;
-    align-items: center;
-    color: rgb(255, 255, 255);
 
+header.style {
+    background-image: '/my worky/nicekidmichael1.png';
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    height: 120;
+    min-width: 100px;
+    align-items: center;
+    color: rgb(0, 171, 250);
+
+}
+
+.header {
+    width: 100%;
+    height: 50px;
+    display: block;
+    float:none;
+    color: white;
+    background-color: #251e3e ;
+}
+
+.logo_container {
+    height: 100%;
+    display:table;
+    float: none;
+    text-align: center;
 }
