--- a/my worky/michael.css
+++ b/my worky/michael.css
@@ -1,28 +1,40 @@
 
-
-header.style {
-    background-image: '/my worky/nicekidmichael1.png';
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    height: 120;
-    min-width: 100px;
-    align-items: center;
-    color: rgb(0, 171, 250);
-
-}
-
 .header {
     width: 100%;
-    height: 50px;
+    height:8%;
     display: block;
     float:none;
     color: white;
     background-color: #251e3e ;
 }
 
-.logo_container {
-    height: 100%;
+.header {
+    width
+    height: 8%;
     display:table;
     float: none;
     text-align: center;
+}
+body.style {
+    height: auto;
+    background-color: #251e3e ;
+}
+
+.nkm-name {
+    text-align: center;
+}
+
+.footer {
+    width: 100%;
+    height: 50px;
+    display: block;
+    float:none;
+    color: white;
+    background-color: #251e3e ;
+    text-align: right;
+}
+
+.memes {
+
+    align-items: center;
 }
