--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 hr {
     background-color: burlywood;
+    margin-left: -5%;
 }
 q {
     color:rgb(68, 51, 29);
@@ -9,6 +10,7 @@ q {
 }
 body {
     font-family: 'Fruktur', cursive;
+    margin: 0;
 }
 header {
     background-color: black;
@@ -21,14 +23,18 @@ footer {
     background-color: black;
     padding: 10px;
 }
-.WhiteContent {
-    height: 580px;
+.Scroll {
+    display: flex;
     width: auto;
     overflow: auto;
     border: 1px solid black;
-    /* padding: 20px; */
-    display: flex;
-    padding: 0 5px;
+    padding: 2px 5px;
+}
+.content {
+    height: 100vh;
+}
+.white {
+    height: 30%;
 }
 .item {
     flex: 1 1 auto;
@@ -37,8 +43,19 @@ footer {
 .picture {
       height: 500px;
   }
-  figcaption {
+figcaption {
       text-align: center;
       font-size: 250%;
       font-family: Arial, Helvetica, sans-serif;
   }
+.text {
+    margin-left: 10px;
+}
+.foot {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.icon {
+    margin: 0 10px;
+}
