--- a/my worky/michael.css
+++ b/my worky/michael.css
@@ -1,29 +1,48 @@
-
+body {
+    font-family: Helvetica;
+    
+    background-color: black;
+    
+}
 .header {
     width: 100%;
-    height:8%;
-    display: block;
-    float:none;
+    height: 50px;
+    position: fixed;
+    display: flex;
+    top: 0;
+    align-items: center;
     color: white;
     background-color: #251e3e ;
 }
 
 .nkm-name {
-    text-align: center;
+    font-size: 48;
+    margin-left: 50px;
+}
+
+.textbody {
+    color: white;
+    font-size: 30px;
+}
+
+.pics {
+   color: white;
 }
 
 .footer {
     width: 100%;
     height: 50px;
-    display: block;
-    float:none;
-    color: white;
+    position: fixed;
+    bottom: 0;
+    align-items: center;
+    display: flex;
     background-color: #251e3e ;
-    text-align: right;
 }
 
-.memes {
-    background-image: url(./images/nicekidmichael.png);
-    height: auto;
-    align-items: center;
+.footertext {
+    color: white;
+    display: flex;
+    font-size: 24px;
+    
 }
+
