--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 header{
     background-color: rgb(250, 109, 255);
@@ -8,12 +9,12 @@ header{
     margin-top: 0;
     margin-left: auto;
     margin-right: auto;
+    opacity: 0.9;
 }
-p{
-    height: 1000px;
-    width: 10px;
-    background-color: black;
+.tag{
+    text-align: center;
 }
+
 footer{
     background-color: rgb(250, 109, 255);
     width: 75vw;
@@ -21,4 +22,9 @@ footer{
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto; 
+    letter-spacing: 1.5vw;
+    opacity: 0.9;
+}
+p{
+    
 }
