--- a/main.css
+++ b/main.css
@@ -1,50 +1,38 @@
-body {
-    font-family:'GOST', '20354';
-}
 @font-face {
     font-family: 'GOST type A Standart';
-    src: url(./Public/fonts/GOST\ type\ A\ Standard.ttf);
+    src: url(./Public/fonts/GOST\ type\ A\ Standard.ttf);}
+   @font-face {
+       font-family: '20354';
+       src: url(./Public/fonts/20354.otf);
+   }
+   @font-face {
+    font-family:'20327';
+    src: url(./Public/fonts/20327.otf);
+   }
+   header{
+    background-color: rgb(173, 189, 245);
     font-family: '20354';
-    src: url(./Public/fonts/20354.otf)
-}
-.headT{
-    border-spacing: 2px;
-    background-color: rgb(233, 160, 182);
-    width:100%;
-    border-collapse:separate;
-    border-top-color: black;
-    border-radius: 40px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bolder;
-    font-style: unset;
-    }
-    .row{
-       border-top-left-radius: 40px;
-       border-end-start-radius: 40px;
-    }
-    .row1{
-        border-top-right-radius: 40px;
-        border-end-end-radius: 40px;
-    }
-TD{
-    text-align:center
-}
- 
-.head1{
+    font-size: 150%;
     text-align: center;
-    font-size: 60px;
-    font-family: '20354';
-}
-.header{
+   }
+.photo1 {
+    zoom:25%;
+    margin-bottom: 600px;
     text-align: center;
-    background-color: lemonchiffon;
-    background-size: 60px;
-    font-family: monospace;
-    position:fixed
-    
+    margin: 100px;
+    padding: 40px;
+
 }
-.footer{
+.head1 {
+    font-family:'20327';
+    text-align: center;
+}
+.scroll {
+    height: 100px;
+}
+footer {
     position: fixed;
-    left: 2; bottom: 0;
-    font-family: Verdana;
+}
+.hex{
+    text-align: center;
 }
