--- a/style.css
+++ b/style.css
@@ -1,63 +1,3 @@
-body, h1 {
-    margin: 0;
-    font-size:100%;
-    font-weight:normal;
-}
-body {
-    font-family: 'Inter', sans-serif;
-}
-header {
-    height: 15vh;
-    background-color: black;
-    text-align: center;
-}
-.header-title {
-    font-size: 100px;
-    color: rgb(141, 141, 141);
-    text-transform: uppercase;
-    margin: auto
-}
-.di-header {
-    width: 100%;
-    height: 100%;
-}
-.logo {
-    height: 15vh;
-}
-.footer {
-    height: 300px;
-    background-color: #000;
-    display:flex
+/* h1 {
     
-}
-  .footer-t {
-    font-size: 24px;    
-    color:#fff;
-  
-}
-  .footer-c {
-    font-size: 24px;    
-    color:#fff;
-    margin-top: 1px;
-    margin-bottom: 3px;
-}
-  .s-content {
-    margin-top: 1px;
-    margin-bottom: 1px;
-    margin-right: 30px;
-    margin-left: 30px;
-}
-.o-text {
-    margin-top: 1px;
-    margin-bottom: 1px;
-    margin-right: 30px;
-    margin-left: 30px;
-}
-.card-text {
-    margin-top: 1px;
-    line-height: 5px;
-}
-.card-title {
-    margin-top: 1px;
-    line-height: 5px;
-}
+} */
