--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
-/* h1 {
-    
-} */
+body, h1 {
+    margin: 0;
+    font-size:100%;
+    font-weight:normal;
+}
+body {
+    font-family: 'Inter', sans-serif;
+}
+header {
+    height: 15vh;
+    background-color: black;
+    text-align: center;
+}
+.header-title {
+    font-size: 90px;
+    color: rgb(141, 141, 141);
+    text-transform: uppercase;
+    margin: auto
+}
+.di-header {
+    width: 100%;
+    height: 100%;
+}
+.logo {
+    height: 15vh;
+}
