--- a/style.css
+++ b/style.css
@@ -24,3 +24,20 @@ header {
 .logo {
     height: 15vh;
 }
+.footer {
+    height: 300px;
+    background-color: #000;
+    display:flex
+    
+}
+.footer-t {
+    font-size: 24px;    
+    color:#fff;
+  
+}
+.footer-c {
+    font-size: 24px;    
+    color:#fff;
+    margin-top: 1px;
+    margin-bottom: 3px;
+}
