--- a/style.css
+++ b/style.css
@@ -41,3 +41,23 @@ header {
     margin-top: 1px;
     margin-bottom: 3px;
 }
+.s-content {
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+.o-text {
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+.card-text {
+    margin-top: 1px;
+    line-height: 5px;
+}
+.card-title {
+    margin-top: 1px;
+    line-height: 5px;
+}
